--- a/src/blocks/about-project/__articles-container/about-project__articles-container.css
+++ b/src/blocks/about-project/__articles-container/about-project__articles-container.css
@@ -4,6 +4,9 @@
 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+
+    column-gap: 30px;
+    row-gap: 56px;
 }
 
 @media screen and (max-width: 768px) {
