--- a/src/blocks/search-form/search-form.css
+++ b/src/blocks/search-form/search-form.css
@@ -9,7 +9,7 @@
 @import url(./__checkbox-container/_position/search-form__checkbox-container_position_on.css);
 
 .search-form {
-    margin: 0;
+    margin: 80px 0 0;
     padding: 0 70px;
 }
 
